# codex.contracts

./: CMakeLists.txt  LICENSE  README.md  build.sh
contracts/: CMakeLists.txt  README.md
contracts/hello/: CMakeLists.txt  README.txt
contracts/hello/include/: hello.hpp
contracts/hello/src/: CMakeLists.txt  hello.cpp
